[gd_scene load_steps=3 format=3 uid="uid://dvx0u8sirsk0w"]

[ext_resource type="Script" path="res://src/menu/player_display.gd" id="1_q1o6m"]
[ext_resource type="PackedScene" uid="uid://kho8utmqdt8f" path="res://scenes/components/ui_player.tscn" id="2_qqj5l"]

[node name="PlayerSelections" type="PanelContainer"]
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_q1o6m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(1, 1, 1, 0.133333)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="MainContainer" type="HBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Player" parent="Margin/MainContainer" instance=ExtResource("2_qqj5l")]
layout_mode = 2

[node name="PerkContainer" type="HBoxContainer" parent="Margin/MainContainer"]
layout_mode = 2

[node name="SpellsContainer" type="VFlowContainer" parent="Margin/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
alignment = 2
